--- a/src/components/GameCard.css
+++ b/src/components/GameCard.css
@@ -17,20 +17,28 @@
   transition: all 300ms ease-in-out;
 }
 
-.game img,
+.game .image {
+  padding: .6rem;
+  border-radius: 15px;
+}
+
 .game h2,
 .game h5 {
   margin-bottom: 0.5rem;
-  padding: .3rem;
+  padding: .2rem .6rem;
 }
 
 .game h2 {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   margin-bottom: 1rem;
 }
 
 .game img {
   border-radius: 10px;
+}
+
+.game a {
+  text-decoration: none;
 }
 
 .game button {
@@ -42,12 +50,20 @@
   font-size: 1.2rem;
   display: flex;
   justify-content: center;
+  align-items: center;
   font-weight: bold;
   width: 100%;
   text-align: center;
   cursor: pointer;
   transition: all 300ms ease;
+  text-decoration: none;
 }
+
+.icon {
+  font-size: 1.2rem;
+  margin-left: 5px;
+}
+
 
 .game button:hover {
   background-color: transparent;
@@ -83,5 +99,9 @@
     margin: auto;
     padding: 0.2rem;
     font-size: 1rem;
+  }
+
+  .icon {
+    font-size: 0.9rem;
   }
 }
