--- a/src/components/GameCard.css
+++ b/src/components/GameCard.css
@@ -5,10 +5,9 @@
   background-size: cover;
   filter: blur(1);
   backdrop-filter: opacity(.1);
-  object-fit: contain;
   padding: .4rem;
   border-radius: 10px;
-  width: 30%;
+  width: 28%;
   box-shadow: 14px 10px 15px 1px rgba(0, 0, 0, 0.5);
 }
 
@@ -17,9 +16,10 @@
   transition: all 300ms ease-in-out;
 }
 
-.game .image {
+.image {
   padding: .6rem;
   border-radius: 15px;
+  object-fit: cover;
 }
 
 .game h2,
@@ -33,12 +33,9 @@
   margin-bottom: 1rem;
 }
 
-.game img {
-  border-radius: 10px;
-}
-
 .game a {
   text-decoration: none;
+  padding: .3rem .6rem;
 }
 
 .game button {
@@ -46,8 +43,8 @@
   border: 2px solid #F7D354;
   border-radius: 4px;
   color: #232323;
-  padding: 0.6rem 0.3rem;
-  font-size: 1.2rem;
+  padding: 0.6rem 0.6rem;
+  font-size: 1.1rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,8 +57,8 @@
 }
 
 .icon {
-  font-size: 1.2rem;
-  margin-left: 5px;
+  font-size: 1rem;
+  margin-left: 8px;
 }
 
 
