--- a/src/routes/Login.css
+++ b/src/routes/Login.css
@@ -1,3 +1,25 @@
+.loader {
+  border: 8px solid #fbf8b9;
+  /* Light grey */
+  border-top: 8px solid #0d4063;
+  /* Blue */
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 2s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .login {
   display: flex;
   align-items: center;
@@ -82,6 +104,7 @@
   border: none;
   border-radius: 12px;
   margin-bottom: 1rem;
+  font-size: 1.1rem;
 }
 
 .container form .inputContainer :placeholder-shown {
@@ -101,7 +124,7 @@
   justify-content: center;
   align-items: center;
   border: none;
-  width: 55%;
+  width: 45%;
   padding: .5rem 1rem;
   border-radius: 12px;
   font-size: 1.2rem;
