--- a/src/components/GameCard.css
+++ b/src/components/GameCard.css
@@ -1,10 +1,8 @@
 .game {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   background-image: url("../img/gradiente.jpg");
   background-size: cover;
-  filter: blur(1);
-  backdrop-filter: opacity(.1);
   padding: .4rem;
   border-radius: 10px;
   width: 28%;
@@ -28,22 +26,58 @@
   padding: .2rem .6rem;
 }
 
+.game h5 {
+  margin-left: 1rem;
+}
+
+.game hr {
+  width: 70%;
+  margin: 0 auto;
+  margin-bottom: 1rem;
+  border: 1px solid #F7D354;
+}
+
 .game h2 {
   font-size: 1.4rem;
-  margin-bottom: 1rem;
+  margin-bottom: .4rem;
+  align-self: center;
+  text-transform: uppercase;
+
 }
+
 
 .game a {
   text-decoration: none;
   padding: .3rem .6rem;
 }
 
-.game button {
+.upperPart {
+  width: 100%;
+  display: flex;
+}
+
+.leftPart {
+  width: 30%;
+}
+
+.rightPart {
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.rating {
+  margin-right: .6rem;
+}
+
+.game .details {
   background-color: #F7D354;
   border: 2px solid #F7D354;
   border-radius: 4px;
   color: #232323;
-  padding: 0.6rem 0.6rem;
+  padding: 0.6rem;
   font-size: 1.1rem;
   display: flex;
   justify-content: center;
@@ -56,13 +90,52 @@
   text-decoration: none;
 }
 
+.heartBtn {
+  color: #808080;
+  width: 10%;
+  padding: .3rem;
+  border: none;
+  cursor: pointer;
+  background: transparent;
+}
+
+.icon-full,
+.icon-empty:hover {
+  font-size: 1.3rem;
+  color: #fc3c5c;
+  transition: 300ms all ease;
+  scale: 1.2;
+}
+
+.icon-empty:hover {
+  scale: 1.3;
+}
+
+.icon-empty {
+  font-size: 1.3rem;
+  transition: 300ms all ease;
+}
+
 .icon {
   font-size: 1rem;
   margin-left: 8px;
+
 }
 
+.star-filled,
+.star-empty:hover {
+  color: #F7D354;
+  font-size: 1.3rem;
+  transition: 300ms all ease;
+}
 
-.game button:hover {
+.star-empty {
+  color: #808080;
+  font-size: 1.3rem;
+  transition: 300ms all ease;
+}
+
+.game .details:hover {
   background-color: transparent;
   color: #F7D354;
 }
@@ -77,7 +150,7 @@
     font-size: 1.2rem;
   }
 
-  .game button {
+  .game .details {
     width: 100%;
     margin: auto;
     padding: 0.2rem;
@@ -91,7 +164,7 @@
     min-width: 100%;
   }
 
-  .game button {
+  .game .details {
     width: 100%;
     margin: auto;
     padding: 0.2rem;
@@ -100,5 +173,18 @@
 
   .icon {
     font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 320px) {
+
+  .upperPart {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .game h5 {
+    margin-left: -1rem;
   }
 }
