--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -48,3 +48,27 @@ h1,
   margin: 0 auto;
   gap: 1.5rem;
 }
+
+.favoritesContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.favoritesBtn,
+.sortBtn {
+  margin-right: 1rem;
+  margin-left: 1rem;
+  font-size: 1rem;
+  color: #f9f9f9;
+  padding: .2rem;
+  border: none;
+  border-bottom: 1px solid #F7D354;
+  width: 12rem;
+  text-align: center;
+  margin-bottom: 2.5rem;
+  background-color: transparent;
+  font-weight: 400;
+  cursor: pointer;
+}
